# nameping

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  labels.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yaml
.github/workflows/: pr-validation.yaml  test.yaml
.kiro/steering/: product.md  structure.md  tech.md
docs/: commands.rst  conf.py  configuration.rst  index.rst  installation.rst
docs/_templates/: layout.html
resources/brand/: demo.yaml
src/nameping/: __init__.py  cli.py  constants.py
src/nameping/commands/: __init__.py  check_company.py  check_domain.py  common.py  config.py
src/nameping/config/: configuration.py  schema.py
src/nameping/controls/: __init__.py  companies.py  domains.py  whois.py
tests/: cli_test.py
tests/nameping/: constants_test.py
